# imprint-cli

./: .gitignore  CLAUDE.md  README.md  install_cli.py  pyproject.toml
.claude/: settings.json
imprint/: __init__.py  cli.py  diff.py  manifest.py  restore.py  snapshot.py
imprint-cli-v2/imprint-v2/: .imprintignore.default  Imprint_Workflow.md  pyproject.toml  tmp_winget.txt  winget.json
imprint-cli-v2/imprint-v2/imprint/: __main__.py  cli.py  config.py  diff.py  restore.py  snapshot.py
imprint-cli-v2/imprint-v2/imprint/collectors/: __init__.py  shell.py  system.py  vscode.py
imprint-cli-v2/imprint-v2/imprint/installers/: scripts.py  shell.py  vscode.py
imprint-cli-v2/imprint-v2/imprint/utils/: display.py  platform.py
imprint-cli-v2/imprint-v2/scripts/: imp.ps1
imprint-cli-v2/imprint-v2/tests/: test_safety.py
imprint/collectors/: dotfiles.py  git_config.py  packages.py  scripts.py
imprint/installers/: __init__.py  dotfiles.py  packages.py
imprint/utils/: __init__.py  display.py  git.py  safety.py
scripts/: imp.bat
tests/: test_cli.py  test_collectors.py  test_manifest.py
