[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "imprint-cli"
version = "1.0.0"
description = "Stamp your developer environment on any machine"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["dotfiles", "developer", "environment", "portable", "devtools", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1.7",
    "rich>=13.7.0",
    "gitpython>=3.1.43",
    "tomli_w>=1.0.0",
    "platformdirs>=4.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
imp = "imprint.cli:main"
imprint = "imprint.cli:main"

[project.urls]
Homepage = "https://github.com/Venkatesh-6921/imprint-cli"
Repository = "https://github.com/Venkatesh-6921/imprint-cli"
"Bug Tracker" = "https://github.com/Venkatesh-6921/imprint-cli/issues"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["imprint"]
